...
      description: 'ปฏิบัติธรรมช่วงกลางวัน',
      icon: Icons.wb_sunny,
      iconColor: Colors.deepOrange,
    ),
    Activity(
      startTime: '13:00',
      endTime: '15:00',
      title: 'พักผ่อน / ทำความสะอาด',
      description: 'งานจิตอาสา / พักผ่อน',
      icon: Icons.cleaning_services,
      iconColor: Colors.teal,
    ),
    Activity(
...
